--- a/index.html
+++ b/index.html
@@ -101,6 +101,14 @@
   <iframe width="560" height="315" src="https://www.youtube.com/embed/Xsrjc5h3QR4" title="YouTube video player"
     frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
     allowfullscreen></iframe>
+  <!-- Contenido de publicidad viene antes de esta sección -->
+  <section class="features">
+    <article>Característica 1</article>
+    <article>Característica 2</article>
+    <article>Característica 3</article>
+    <article>Característica 4</article>
+  </section>
+<!-- Contenido de casos de éxito vienen después -->
 </body>
 
 </html>
